# sample_data_app

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml  shell.nix
buildozer/: build_android_apk.sh  build_container.sh  buildozer.def  buildozer.spec  buildozer_base.def  shell.nix
src/sample_data_app/: main.py  sd_choose_file.py  sd_confirm_delete.py  sd_edit_data.py  sd_gen_qr.py  sd_list_view.py  sd_main_menu.py  sd_scan_qr.py  sd_show_error.py
tests/: check_all.sh  test_all.sh
