[project]
version = "0.1"
name = "SampleDataApp"
dependencies = [
    "kivy >= 2.3.0",
    "opencv-python > 4.9.0",
    "plyer >= 2.1.0",
    "segno >= 1.6.1"
]
requires-python = ">= 3.12"
readme = "README.md"
description = "Python app for collecting samples meta data."
maintainers = [
  {name = "Willi Kappler", email = "grandor@gmx.de"}
]
authors = [
  {name = "Willi Kappler", email = "grandor@gmx.de"}
]
keywords = ["sample", "data", "collection", "metadata"]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/willi-kappler/sample_data_app"

